Bug 154303 - JAWS no longer announces focused menu item
Summary: JAWS no longer announces focused menu item
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.1.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.6.0 target:7.5.2.2
Keywords: accessibility, bibisected, bisected, regression
: 154404 (view as bug list)
Depends on:
Blocks: a11y-Windows
  Show dependency treegraph
 
Reported: 2023-03-21 08:18 UTC by Michael Weghorn
Modified: 2023-03-27 15:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2023-03-21 08:18:15 UTC
originally reported as a regression between LO 7.4 and 7.5.1 by David Goldfield on the a11y mailing list:
https://listarchives.libreoffice.org/global/accessibility/msg01022.html

Quoting from there:

"When navigating in a pull-down menu JAWS is silent and no longer
reads the item that has focus. Example: press alt+T for the Tools menu and
press down arrow to navigate in this menu. JAWS is now silent when moving
from one item to the next."

Reproducible with JAWS 2023.2302.15 and

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5c78600292d965af157967343a1a4559a086d39a
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2023-03-21 08:19:46 UTC
Self-confirming since the original report on the mailing list was by somebody else.

This is a regression, bibisected to:

commit 8d8e6c84e512c1a8b33aac75965b84481d1a1d13
Author: Noel Grandin
Date:   Sun Jul 3 20:29:28 2022 +0200

    [API CHANGE] Drop css::accessibility::XAccessibleStateSet
    
    which is internal API, unused (as far as I can tell) by external
    users.
    This state is purely a bitset
      (as implemented by utl::AccessibleStateSetHelper)
    so we can just return it as a 64-bit value.
    
    This shaves significant time off the performance profiles
    of code that loads very complex shapes, because this state
    is frequently used, and we no longer need to allocate a return
    value on the heap for every call.
    
    Change-Id: Icf1b3bd367c256646ae9015f9127025f59459c2c
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136786
    Reviewed-by: Michael Weghorn
    Tested-by: Jenkins
    Reviewed-by: Noel Grandin
Comment 2 Michael Weghorn 2023-03-21 18:46:10 UTC
Pending fix:
https://gerrit.libreoffice.org/c/core/+/149255
Comment 3 Commit Notification 2023-03-22 06:37:06 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/02edbf7dc7cf1a3bcc1b943e79c027e3c144d544

tdf#154303 wina11y: Don't truncate 64-bit states

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-03-22 08:23:28 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/67c82d6a7a5f02c54c1e4ef1530b3de745955ede

tdf#154303 wina11y: Don't truncate 64-bit states

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-03-22 13:15:13 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-2":

https://git.libreoffice.org/core/commit/43db0608b7423faf74eee5c6a36e3360db3735c9

tdf#154303 wina11y: Don't truncate 64-bit states

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 V Stuart Foote 2023-03-27 15:09:52 UTC
*** Bug 154404 has been marked as a duplicate of this bug. ***