tdf#154303 wina11y: Don't truncate 64-bit states

commit 8d8e6c84e512c1a8b33aac75965b84481d1a1d13
    Date:   Sun Jul 3 20:29:28 2022 +0200

        [API CHANGE] Drop css::accessibility::XAccessibleStateSet

had introduced the use of a 64-bit integer with
bit flags for the accessible states.

However, `AccObjectWinManager::DecreaseState` and
`AccObjectWinManager::IncreaseState` were still using
unsigned short, resulting in truncation.

As one result, the `AccessibleEventId::STATE_CHANGED`
event with state `AccessibleStateType::VISIBLE`
from `OAccessibleMenuBaseComponent::SetVisible` would no
longer result in the `STATE_SYSTEM_INVISIBLE` being unset
and thus the the JAWS screen reader would no longer announce
the focused (but considered invisible) menu item.

Fix this by switching the param for those two methods to
sal_Int64 as well.

Change-Id: I714573e2691e82c6287a4b83f872f87568e46495
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149255
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit 2f206b84385ed62bb56982270dce57ad4dace472)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149295
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>